Hide arrow in selection summary by setting visibility instead of display to prevent from jumping

--- a/app/common/components/resource/resource-list/resource-list.directive.sass
+++ b/app/common/components/resource/resource-list/resource-list.directive.sass
@@ -443,7 +443,7 @@
         border-color: white
         color: white
         .fa
-          display: block
+          visibility: visible
           color: white
       .selection-summary-title
         display: block
@@ -452,7 +452,7 @@
       .fa
         float: right
         font-size: 22px
-        display: none
+        visibility: hidden
 
 
 
